<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/userpic"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/text_username"
            android:textSize="@dimen/textSize_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/username"
            tools:ignore="SpUsage" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"/>

        <Button
            android:id="@+id/jumpToActivityMusic"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/my_music"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textSize="@dimen/textSize_40"
            android:text="@string/localMusic"
            tools:ignore="SpUsage" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"/>
        <Button
            android:id="@+id/jumpToMyLove"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/love"
            android:layout_gravity="center" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textSize="@dimen/textSize_40"
            android:text="@string/love"
            tools:ignore="SpUsage" />


    </LinearLayout>

</LinearLayout>